# timer-hs

./: README.md  timer-hs.cabal
app/: Main.hs
src/: Command.hs  Config.hs  Controler.hs  Lib.hs  Usage.hs  View.hs
src/Config/: Internal.hs
src/Controler/: Internal.hs
test/: ConfigSpec.hs  ControlerSpec.hs
