name:                timer-hs
version:             0.0.2
-- synopsis:
description:         a Haskell learning project
homepage:            https://github.com/githubuser/timer-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Usage
                     , Config
                     , Config.Internal
                     , View
                     , Command
                     , Controler
                     , Controler.Internal
  build-depends:       base >= 4.7 && < 5
                     , process
                     , mtl
  other-modules:       Paths_timer_hs
  default-language:    Haskell2010

executable timer-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timer-hs
                     , mtl
  default-language:    Haskell2010

test-suite timer-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timer-hs
                     , mtl
                     , hspec
                     , QuickCheck
  other-modules:       ConfigSpec
                     , ControlerSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thibran/timer-rs
